// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a contact correctly 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      <div
        className="MuiCardMedia-root-29 media"
        style={
          Object {
            "backgroundImage": "url(\\"/avatars/24.jpg\\")",
          }
        }
      />
      <div
        className="MuiCardContent-root-31"
      >
        <h2
          className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-59"
        >
          Marchall
           
          Abdee
        </h2>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Email: 
          mabdee0@behance.net
        </p>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Phone: 
          2539464783
        </p>
      </div>
      <div
        className="MuiCardActions-root-68"
      >
        <a
          className="MuiCardActions-action-70"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-72"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-100"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94 MuiCardActions-action-70"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-72"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-100"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when loading 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      <div
        className="MuiCardMedia-root-29 media"
        style={
          Object {
            "backgroundImage": "url(\\"/avatars/24.jpg\\")",
          }
        }
      />
      <div
        className="sc-bwzfXH fqBCWh"
      >
        <div
          className="MuiCircularProgress-root-107 MuiCircularProgress-colorPrimary-110 MuiCircularProgress-indeterminate-109"
          role="progressbar"
          style={
            Object {
              "height": 50,
              "width": 50,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-112"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-113 MuiCircularProgress-circleIndeterminate-115"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="MuiCardActions-root-68"
      >
        <a
          className="MuiCardActions-action-70"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-72"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-100"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94 MuiCardActions-action-70"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-72"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-100"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when no large avatar image 1`] = `
<div
  className="sc-htpNat ixzLSm"
>
  <div
    className="sc-bdVaJa dNIUDI"
  >
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1 card"
    >
      
      <div
        className="MuiCardContent-root-31"
      >
        <h2
          className="MuiTypography-root-32 MuiTypography-headline-37 MuiTypography-gutterBottom-59"
        >
          Marchall
           
          Abdee
        </h2>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Email: 
          mabdee0@behance.net
        </p>
        <p
          className="MuiTypography-root-32 MuiTypography-body1-41"
        >
          Phone: 
          2539464783
        </p>
      </div>
      <div
        className="MuiCardActions-root-68"
      >
        <a
          className="MuiCardActions-action-70"
          href="/edit/4"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94"
            disabled={false}
            id="edit-contact"
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-72"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-100"
            />
          </button>
        </a>
        <button
          className="MuiButtonBase-root-97 MuiButton-root-71 MuiButton-text-73 MuiButton-textPrimary-74 MuiButton-flat-76 MuiButton-flatPrimary-77 MuiButton-sizeSmall-94 MuiCardActions-action-70"
          disabled={false}
          id="delete-contact"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-72"
          >
            Delete
          </span>
          <span
            className="MuiTouchRipple-root-100"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
